--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -15,7 +15,7 @@
 
     <item android:id="@+id/nav_user"
         android:title="Usuario"
-        android:icon="@drawable/ic_perfil"/>
+        android:icon="@drawable/ic_people"/>
 
 
 
