--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -47,7 +47,7 @@
 
 
             <ImageView
-                android:id="@+id/avatarIv"
+                android:id="@+id/perfilIv"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginStart="20dp"
