--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -18,9 +18,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/mAvatarIV"
+            android:id="@+id/perfilIv"
             android:layout_width="70dp"
-            android:layout_height="70dp" />
+            android:layout_height="70dp"/>
 
     </LinearLayout>
 
