--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -104,14 +104,16 @@
         android:id="@+id/enviar_registro"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="196dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginBottom="128dp"
         android:background="@drawable/btn_registro"
         android:text="Registrarse!!"
         android:textColor="#40514e"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/typeUser" />
 
     <TextView
         android:id="@+id/textView"
@@ -129,4 +131,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enviar_registro"
         app:layout_constraintVertical_bias="0.052" />
+
+    <Switch
+        android:id="@+id/typeUser"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="24dp"
+        android:text="Soy farmaceutico"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/enviar_registro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_telefono" />
 </androidx.constraintlayout.widget.ConstraintLayout>
