--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,11 +7,18 @@
     tools:context=".Activity.EditarUsuario"
     android:background="@drawable/fondo">
 
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <EditText
         android:id="@+id/Edreg_name"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="508dp"
         android:background="@drawable/input"
         android:hint="  Nombre de Usuario"
@@ -25,13 +32,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_user" />
 
     <EditText
         android:id="@+id/Edreg_telefono"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="272dp"
         android:background="@drawable/input"
         android:ems="10"
@@ -45,13 +54,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Edreg_contra" />
 
     <EditText
         android:id="@+id/Edreg_contra"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="348dp"
         android:background="@drawable/input"
         android:ems="10"
@@ -65,12 +76,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Edreg_correo" />
 
     <TextView
         android:id="@+id/login_user"
-        android:layout_width="208dp"
-        android:layout_height="64dp"
+        android:layout_width="242dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="72dp"
         android:layout_marginBottom="608dp"
         android:text="Datos Usuario!"
         android:textColor="#e4f9f5"
@@ -78,13 +91,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.556"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Edreg_correo"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="428dp"
         android:background="@drawable/input"
         android:hint="  Ingrese su correo electronico"
@@ -98,7 +113,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Edreg_name" />
 
 
     <Button
@@ -122,7 +138,8 @@
         android:layout_margin="200px"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp"
-        android:text="© Copyright 2020 - Todos los Derechos Reservados"
+        android:gravity="center"
+        android:text="© Copyright 2020 - Monteria"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,3 +148,5 @@
         app:layout_constraintTop_toBottomOf="@+id/enviar_registro"
         app:layout_constraintVertical_bias="0.052" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
