--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,10 @@
 
     <TextView
         android:id="@+id/titulo"
-        android:layout_width="185dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="588dp"
+        android:layout_marginBottom="578dp"
         android:text="Welcome!"
         android:textColor="#E4F9F5"
         android:textSize="40sp"
@@ -38,9 +38,9 @@
         android:id="@+id/titulo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="556dp"
-        android:textColor="#E4F9F5"
+        android:layout_marginBottom="546dp"
         android:text="Nice to have you in this app!"
+        android:textColor="#E4F9F5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.067"
@@ -83,15 +83,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
+        android:layout_width="271dp"
+        android:layout_height="27dp"
         android:layout_gravity="center"
         android:layout_margin="200px"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="© Copyright 2020 - Todos los Derechos Reservados"
+        android:gravity="center"
+        android:text="© Copyright 2020 - Monteria"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
