--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,149 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@drawable/fondo"
     tools:context=".Activity.Registro">
 
-    <EditText
-        android:id="@+id/reg_name"
-        android:layout_width="329dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="508dp"
-        android:background="@drawable/input"
-        android:hint="  Nombre de Usuario"
-        android:inputType="text"
-        android:padding="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#ccc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/reg_telefono"
-        android:layout_width="329dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="272dp"
-        android:background="@drawable/input"
-        android:ems="10"
-        android:hint="  Ingrese su telefono"
-        android:inputType="phone"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#ccc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+      <EditText
+          android:id="@+id/reg_name"
+          android:layout_width="329dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="48dp"
+          android:layout_marginBottom="508dp"
+          android:background="@drawable/input"
+          android:hint="  Nombre de Usuario"
+          android:inputType="text"
+          android:padding="10dp"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:paddingBottom="10dp"
+          android:textColor="#FFFFFF"
+          android:textColorHint="#ccc"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.455"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/login_user" />
 
-    <EditText
-        android:id="@+id/reg_contra"
-        android:layout_width="329dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="348dp"
-        android:background="@drawable/input"
-        android:ems="10"
-        android:hint="  Ingrese su contraseña"
-        android:inputType="textPassword"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#ccc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+      <EditText
+          android:id="@+id/reg_telefono"
+          android:layout_width="329dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginBottom="272dp"
+          android:background="@drawable/input"
+          android:ems="10"
+          android:hint="  Ingrese su telefono"
+          android:inputType="phone"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:paddingBottom="10dp"
+          android:textColor="#FFFFFF"
+          android:textColorHint="#ccc"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.455"
+          app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/login_user"
-        android:layout_width="191dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="620dp"
-        android:text="Sign Up Now!"
-        android:textColor="#e4f9f5"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+      <EditText
+          android:id="@+id/reg_contra"
+          android:layout_width="329dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginBottom="348dp"
+          android:background="@drawable/input"
+          android:ems="10"
+          android:hint="  Ingrese su contraseña"
+          android:inputType="textPassword"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:paddingBottom="10dp"
+          android:textColor="#FFFFFF"
+          android:textColorHint="#ccc"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.455"
+          app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/reg_correo"
-        android:layout_width="329dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="428dp"
-        android:background="@drawable/input"
-        android:hint="  Ingrese su correo electronico"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#ccc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent" />
+      <TextView
+          android:id="@+id/login_user"
+          android:layout_width="248dp"
+          android:layout_height="50dp"
+          android:layout_marginTop="62dp"
+          android:layout_marginBottom="10dp"
+          android:text="Sign Up Now!"
+          android:textColor="#e4f9f5"
+          android:textSize="30sp"
+          app:layout_constraintBottom_toTopOf="@+id/reg_name"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.496"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+      <EditText
+          android:id="@+id/reg_correo"
+          android:layout_width="329dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginBottom="428dp"
+          android:background="@drawable/input"
+          android:hint="  Ingrese su correo electronico"
+          android:inputType="textEmailAddress"
+          android:padding="10dp"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:paddingBottom="10dp"
+          android:textColor="#FFFFFF"
+          android:textColorHint="#ccc"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.455"
+          app:layout_constraintStart_toStartOf="parent" />
 
 
-    <Button
-        android:id="@+id/enviar_registro"
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:layout_marginBottom="128dp"
-        android:background="@drawable/btn_registro"
-        android:text="Registrarse!!"
-        android:textColor="#40514e"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeUser" />
+      <Button
+          android:id="@+id/enviar_registro"
+          android:layout_width="128dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="32dp"
+          android:layout_marginBottom="128dp"
+          android:background="@drawable/btn_registro"
+          android:text="Registrarse!!"
+          android:textColor="#40514e"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.445"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/typeUser" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="333dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="200px"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
-        android:text="© Copyright 2020 - Todos los Derechos Reservados"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.589"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enviar_registro"
-        app:layout_constraintVertical_bias="0.052" />
+      <TextView
+          android:id="@+id/textView"
+          android:layout_width="333dp"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:layout_margin="200px"
+          android:layout_marginTop="24dp"
+          android:layout_marginBottom="24dp"
+          android:gravity="center"
+          android:text="© Copyright 2020 - Monteria"
+          android:textColor="#FFFFFF"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.589"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/enviar_registro"
+          app:layout_constraintVertical_bias="0.052" />
 
-    <Switch
-        android:id="@+id/typeUser"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="24dp"
-        android:text="Soy farmaceutico"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/enviar_registro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_telefono" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+      <Switch
+          android:id="@+id/typeUser"
+          android:layout_width="208dp"
+          android:layout_height="39dp"
+          android:layout_marginStart="50dp"
+          android:layout_marginTop="100dp"
+          android:layout_marginEnd="200dp"
+          android:text="Soy farmaceutico"
+          android:textColor="#FFFFFF"
+          app:layout_constraintBottom_toTopOf="@+id/enviar_registro"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.085"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/reg_telefono" />
+   </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
