--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -81,10 +81,11 @@
 
     <TextView
         android:id="@+id/login_user"
-        android:layout_width="242dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="299dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="52dp"
         android:layout_marginBottom="608dp"
+        android:gravity="center"
         android:text="Datos Usuario!"
         android:textColor="#e4f9f5"
         android:textSize="30sp"
