--- a/app/src/main/res/layout/activity_explorar.xml
+++ b/app/src/main/res/layout/activity_explorar.xml
@@ -29,6 +29,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/listPreferredItemHeightLarge"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:context=".Activity.Explorar" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addFarmacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="#03A9F4"
+        android:clickable="true"
+        android:focusable="auto"
+        android:foregroundGravity="bottom|right"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="#FFFFFF"
+        android:visibility="invisible"
+        app:fabSize="auto"
+        app:layout_constraintBottom_toBottomOf="@id/map"
+        app:layout_constraintEnd_toEndOf="@id/map"
+        tools:srcCompat="@android:drawable/ic_input_add"
+        tools:visibility="invisible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
