--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -13,26 +13,7 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addFarmacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="#03A9F4"
-            android:clickable="true"
-            android:focusable="auto"
-            android:src="@android:drawable/ic_input_add"
-            android:tint="#FFFFFF"
-            android:visibility="invisible"
-            app:fabSize="auto"
-            tools:srcCompat="@android:drawable/ic_input_add"
-            tools:visibility="invisible" />
-    </FrameLayout>
+        android:layout_weight="1"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
